--- a/worker/package.json
+++ b/worker/package.json
@@ -11,12 +11,14 @@
     "db:migrate": "wrangler d1 execute bitsynq-db --local --file=src/db/schema.sql"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
     "ethers": "^6.16.0",
     "hono": "^4.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240117.0",
+    "solc": "^0.8.20",
     "typescript": "^5.3.0",
     "vitest": "^1.2.0",
     "wrangler": "^4.54.0"
