--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,20 @@
 		"lint": "eslint ."
 	},
 	"dependencies": {
-		"vue": "^3.5.0",
-		"vue-router": "^4.4.0",
+		"@mdi/font": "^7.4.0",
 		"pinia": "^2.2.0",
-		"vuetify": "^3.7.0",
-		"@mdi/font": "^7.4.0"
+		"vue": "^3.5.0",
+		"vue-i18n": "^9.14.5",
+		"vue-router": "^4.4.0",
+		"vuetify": "^3.7.0"
 	},
 	"devDependencies": {
+		"@types/node": "^22.0.0",
 		"@vitejs/plugin-vue": "^5.2.0",
+		"sass": "^1.80.0",
 		"typescript": "~5.6.0",
 		"vite": "^6.0.0",
 		"vite-plugin-vuetify": "^2.0.0",
-		"vue-tsc": "^2.0.0",
-		"@types/node": "^22.0.0",
-		"sass": "^1.80.0"
+		"vue-tsc": "^2.0.0"
 	}
 }
