--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"@mdi/font": "^7.4.0",
+		"axios": "^1.13.2",
+		"date-fns": "^4.1.0",
 		"pinia": "^2.2.0",
 		"vue": "^3.5.0",
 		"vue-i18n": "^9.14.5",
